Fixes of RestApiModule

--- a/config/config.restApi.neon
+++ b/config/config.restApi.neon
@@ -9,10 +9,14 @@ services:
 		- addRouteLoader(@Wame\RestApiModule\Loaders\RepositoryAnnotationRestApiLoader)
 		- addRouteLoader(@Wame\RestApiModule\Loaders\MapRestApiLoader)
 	
-	- Wame\RestApiModule\DataConverter\DateDataConverter
 	- Wame\RestApiModule\DataConverter\ObjectDataConverter
+	- Wame\RestApiModule\DataConverter\ArrayDataConverter
+	- Wame\RestApiModule\DataConverter\DateDataConverter
+	- Wame\RestApiModule\DataConverter\DoctrineProxyDataConverter
 	restApiDataConverter:
 		class: Wame\RestApiModule\DataConverter\RestApiDataConverter
 		setup:
-		- addConverter(@Wame\RestApiModule\DataConverter\DateDataConverter)
 		- addConverter(@Wame\RestApiModule\DataConverter\ObjectDataConverter)
+		- addConverter(@Wame\RestApiModule\DataConverter\ArrayDataConverter)		
+		- addConverter(@Wame\RestApiModule\DataConverter\DateDataConverter)
+		- addConverter(@Wame\RestApiModule\DataConverter\DoctrineProxyDataConverter)
